docs: update description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "get-cookies"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
-description = "Get cookies from a webview2 window"
+description = "Get cookies from a pop-up window"
 homepage = "https://github.com/lonelam/get-cookies-rs"
 documentation = "https://lonelam.github.io/get-cookies-rs/"
 repository = "https://github.com/lonelam/get-cookies-rs"
