--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ tao = { version = "0.24.1", features = ["serde", "rwh_05"] }
 tokio = { version = "1.35.1", features = ["full"] }
 wry = "0.35.2"
 
+[dev-dependencies]
+reqwest = { version = "0.12.4", features = ["json", "cookies", "socks", "multipart"] }
+regex = "1.10.4"
+
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25.0"
 objc = "0.2.7"
@@ -34,3 +38,9 @@ soup3 = "0.5.0"
 [[bin]]
 name = "get-cookies"
 path = "src/main.rs"
+
+[[example]]
+name = "github"
+
+[[example]]
+name = "github-readme"
